# glbt

./: .gitignore  README.org
bindings/c/: CMakeLists.txt  CMakeSettings.json
bindings/c/resources/: basic.glsl.frag  basic.glsl.vert  postprocess.glsl.frag  postprocess.glsl.vert
bindings/c/src/: main.c
bindings/python/: build_extension.py  glbt.c  glbt.cp310-win_amd64.pyd  glbt.cp39-mingw_x86_64.pyd  glbt_py.py  test.py
bindings/python/shaders/: color.glsl.frag  color.glsl.vert
include/: glbt.h  glbt_interface.h
include/internal/: buffer.h  framebuffer.h  platform.h  render.h  texture.h
include/internal/glad/: glad.h
src/: buffer.c  framebuffer.c  pipeline.c  render.c  texture.c  window.c
src/internal/: glad.c
